changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2015 Rahul Krishna.
  -->
 <head>
-	<title>Example website</title>
+	<title>A Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; ASU Student 2015</p>
 	</footer>
 </body>
 </html>
