Changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2015 Rahul Krishna.
  -->
 <head>
-	<title>Example website</title>
+	<title>A Respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Blah Blah Blah
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Rahul Krishna 2015</p>
 	</footer>
 </body>
 </html>
