before rebasing conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2015 Rahul Krishna.
+	Adding changes before rebasing the conflicts
  -->
 <head>
 	<title>A Great website</title>
