fb adding some trouble

--- a/simple.html
+++ b/simple.html
@@ -18,8 +18,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content, changes from master
-			adding some conflicts from master.
+			Just some content, changed
+			Adding some trouble
 		</p>
 	</main>
 	<footer class="container">
