mb conflicting changes added

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2015 Rahul Krishna.
-	Adding changes before rebasing the conflicts
+	Adding changes before rebasing the conflicts, and more changes done
  -->
 <head>
 	<title>A Great website</title>
@@ -18,7 +18,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content, changes from master
+			adding some conflicts from master.
 		</p>
 	</main>
 	<footer class="container">
