--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2015 Rahul Krishna.
  -->
 <head>
-	<title>Stash Example</title>
+	<title>Multiple Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
